--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "./node_modules/.bin/protractor test/protractor.conf.js",
     "update-webdriver": "./node_modules/.bin/webdriver-manager update",
-    "scenarios": "./node_modules/.bin/http-server test/e2e/scenarios/ -p 8000"
+    "scenarios": "./node_modules/.bin/http-server test/e2e/scenarios/ -p 8000",
+    "build-xpi": "gulp && cd ng-inspector.firefox && jpm xpi ",
+    "run-xpi": "gulp && cd ng-inspector.firefox && jpm run "
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,7 @@
     "gulp-less": "~1.2.3",
     "gulp-replace": "~0.3.0",
     "protractor": "~0.24.0",
-    "http-server": "~0.6.1"
+    "http-server": "~0.6.1",
+    "jpm": "^1.0.0"
   }
 }
