[webext] minor tweaks needed to run the chrome add-on as a Firefox WebExtensions add-on

--- a/ng-inspector.chrome/manifest.json
+++ b/ng-inspector.chrome/manifest.json
@@ -3,11 +3,15 @@
   "name": "ng-inspector for AngularJS",
   "description": "Inspector pane for AngularJS apps",
   "version": "0.5.11",
+  "applications": {
+    "gecko": {
+      "id": "ng-inspector@webextension"
+    }
+  },
   "background": {
     "scripts": [
       "background.js"
-    ],
-    "persistent": false
+    ]
   },
   "permissions": [
     "tabs",
